[gd_scene load_steps=12 format=3 uid="uid://d4mx4nrp830cw"]

[ext_resource type="Script" uid="uid://b6fr3j5ubyi7t" path="res://scripts/enemy_2.gd" id="1_527ua"]
[ext_resource type="Texture2D" uid="uid://ckil6jqtpokrv" path="res://assests/Spritesheet.png" id="2_48bj6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qit8y"]
atlas = ExtResource("2_48bj6")
region = Rect2(0, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gdgy"]
atlas = ExtResource("2_48bj6")
region = Rect2(16, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n4gd"]
atlas = ExtResource("2_48bj6")
region = Rect2(32, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfsys"]
atlas = ExtResource("2_48bj6")
region = Rect2(48, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_plxki"]
atlas = ExtResource("2_48bj6")
region = Rect2(64, 144, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o7g4"]
atlas = ExtResource("2_48bj6")
region = Rect2(80, 144, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdifi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qit8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gdgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n4gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfsys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plxki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o7g4")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jwqgc"]
radius = 6.83537

[sub_resource type="CircleShape2D" id="CircleShape2D_0a874"]
radius = 49.5025

[node name="enemy 2" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(1.6, 1.6)
script = ExtResource("1_527ua")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mdifi")
autoplay = "default"
frame_progress = 0.276049

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.333333, 1.875)
shape = SubResource("CircleShape2D_jwqgc")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("CircleShape2D_0a874")

[node name="exit" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="exit"]
visible = false
shape = SubResource("CircleShape2D_0a874")

[node name="left" type="RayCast2D" parent="."]
rotation = -0.000147177
target_position = Vector2(-15, -0.00220765)

[node name="right" type="RayCast2D" parent="."]
rotation = 1.57105
target_position = Vector2(-0.00364724, -14.375)

[node name="down" type="RayCast2D" parent="."]
target_position = Vector2(0, 20)

[node name="up" type="RayCast2D" parent="."]
target_position = Vector2(0, -13.125)

[node name="ProgressBar" type="ProgressBar" parent="."]
self_modulate = Color(0.543626, 0.594249, 1, 1)
offset_left = -10.0
offset_top = -11.875
offset_right = 10.0
offset_bottom = -7.875
max_value = 10.0
step = 1.0
value = 10.0
rounded = true
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6

[node name="hit" type="Timer" parent="."]
wait_time = 0.663

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="exit" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="exit" to="." method="_on_exit_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="hit" to="." method="_on_hit_timeout"]
